--- a/style_java_script_demo.html
+++ b/style_java_script_demo.html
@@ -6,25 +6,24 @@
   <script>
     document.addEventListener('DOMContentLoaded',function(){
 
-        document.querySelectorAll("button").forEach(button => {
+       document.querySelector("select").onchange=function(){
 
-          button.onclick=function(){
-            document.getElementById("heading").style.color=button.dataset.color;
-          }
+         document.getElementById("heading").style.color=this.value;
 
-        })
-
+       }
     })
   </script>
 </head>
 <body>
   <h1 id="heading">Hello</h1>
   <br>
-  <button data-color="red">Red</button>
-  <button data-color="green">Green</button>
-  <button data-color="blue">Blue</button>
-  <button data-color="pink">Pink</button>
-
+  <select>
+    <option value="red">Red</option>
+    <option value="green">Green</option>
+    <option value="blue">Blue</option>
+    <option value="pink">pink</option>
+    <option value="orange">orange</option>
+  </select>
 
 
 </body>
