input type color

--- a/style_java_script_demo.html
+++ b/style_java_script_demo.html
@@ -6,25 +6,24 @@
   <script>
     document.addEventListener('DOMContentLoaded',function(){
 
-       document.querySelector("select").onchange=function(){
+      document.getElementById("colorinput").onchange=function (){
 
-         document.getElementById("heading").style.color=this.value;
+        document.getElementById("heading").style.color=this.value;
+      }
 
-       }
+      document.getElementById("colorbackgroundinput").onchange=function (){
+
+        document.getElementById("heading").style.backgroundColor=this.value;
+      }
     })
   </script>
 </head>
 <body>
   <h1 id="heading">Hello</h1>
   <br>
-  <select>
-    <option value="red">Red</option>
-    <option value="green">Green</option>
-    <option value="blue">Blue</option>
-    <option value="pink">pink</option>
-    <option value="orange">orange</option>
-  </select>
-
+  font color :<input type="color" id="colorinput">
+  </br>
+  Background color :<input type="color" id="colorbackgroundinput">
 
 </body>
 </html>
